--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -1332,7 +1332,60 @@ Next, in the codelabs-tab, I clicked this link:
 
 %img(src='/lesson002/l263.png')
 
+%p I studied that page; I clicked through to the next page:
 
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-big-query#1' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-big-query#1
+  
+%p I bookmarked links from that page:
+
+%ul
+  %li
+    %a(href='https://developers.google.com/bigquery/docs/data%23aclsandrights' target='x')
+      https://developers.google.com/bigquery/docs/data%23aclsandrights
+  %li
+    %a(href='https://code.google.com/apis/console/' target='x')
+      https://code.google.com/apis/console/
+  %li
+    %a(href='https://developers.google.com/bigquery/docs/reference/v2/projects' target='x')
+      https://developers.google.com/bigquery/docs/reference/v2/projects
+  %li
+    %a(href='https://developers.google.com/bigquery/docs/reference/v2/datasets' target='x')
+      https://developers.google.com/bigquery/docs/reference/v2/datasets
+  %li
+    %a(href='https://developers.google.com/bigquery/docs/reference/v2/tables' target='x')
+      https://developers.google.com/bigquery/docs/reference/v2/tables
+  %li
+    %a(href='https://cloud.google.com/bigquery/federated-data-sources' target='x')
+      https://cloud.google.com/bigquery/federated-data-sources
+  %li
+    %a(href='https://cloud.google.com/bigquery/what-is-bigquery#jobs' target='x')
+      https://cloud.google.com/bigquery/what-is-bigquery#jobs
+  %li
+    %a(href='https://cloud.google.com/bigquery/streaming-data-into-bigquery' target='x')
+      https://cloud.google.com/bigquery/streaming-data-into-bigquery
+  %li
+    %a(href='https://cloud.google.com/storage/' target='x')
+      https://cloud.google.com/storage/
+  %li
+    %a(href='https://cloud.google.com/bigquery/streaming-data-into-bigquery' target='x')
+      https://cloud.google.com/bigquery/streaming-data-into-bigquery
+  %li
+    %a(href='https://cloud.google.com/datastore/' target='x')
+      https://cloud.google.com/datastore/
+  %li
+    %a(href='https://developers.google.com/bigquery/docs/reference/v2/jobs' target='x')
+      https://developers.google.com/bigquery/docs/reference/v2/jobs
+  
+
+%p I collected an image from that page:
+
+%img(src='/lesson002/l264.png')
+
+%p I memorize the above image as this phrase:
+
+%p Project has many Datasets has many Tables has many Rows with Columns
 
 
 
