--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -1369,9 +1369,6 @@ Next, in the codelabs-tab, I clicked this link:
     %a(href='https://cloud.google.com/storage/' target='x')
       https://cloud.google.com/storage/
   %li
-    %a(href='https://cloud.google.com/bigquery/streaming-data-into-bigquery' target='x')
-      https://cloud.google.com/bigquery/streaming-data-into-bigquery
-  %li
     %a(href='https://cloud.google.com/datastore/' target='x')
       https://cloud.google.com/datastore/
   %li
@@ -1383,11 +1380,37 @@ Next, in the codelabs-tab, I clicked this link:
 
 %img(src='/lesson002/l264.png')
 
-%p I memorize the above image as this phrase:
+%p I memorized the above image as this phrase:
 
 %p Project has many Datasets has many Tables has many Rows with Columns
 
 
+%p I clicked through to the next page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-big-query#2' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-big-query#2
+  
+%p I studied that page.
+
+%p In the GCP-tab I visited the URL to set my project to CP100:
+
+%p
+  %a(href='https://console.cloud.google.com' target='x')
+    https://console.cloud.google.com
+%p After I set the project to "cp100", I clicked the top-left-hamburger link.
+
+%p From there I clicked BigQuery near the bottom.
+
+%p It opened a new tab with this URL:
+
+%p
+  %a(href='https://bigquery.cloud.google.com' target='x')
+    https://bigquery.cloud.google.com
+
+%p I saw this:
+
+%img(src='/lesson002/l265.png')
 
 
 
