--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -1412,6 +1412,38 @@ Next, in the codelabs-tab, I clicked this link:
 
 %img(src='/lesson002/l265.png')
 
+%p I clicked the select-option to the right of cp100:
+
+%img(src='/lesson002/l266.png')
+
+%p I asked for a new Dataset named: "cp100":
+
+%img(src='/lesson002/l267.png')
+
+%p I clicked blue-button: "OK".
+%p Next, I clicked the tiny-blue-button: "+".
+%p GCP offered me a form to specify Source-Data:
+
+%img(src='/lesson002/l268.png')
+
+%p I filled it out:
+
+%img(src='/lesson002/l269.png')
+
+%p At the bottom I clicked blue-button: "Create Table".
+
+%p I saw this:
+
+%img(src='/lesson002/l270.png')
+
+%p I inspected the new table:
+
+%img(src='/lesson002/l271.png')
+
+%hr/
+
+%img(src='/lesson002/l272.png')
+
 
 
 
