--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -1444,9 +1444,72 @@ Next, in the codelabs-tab, I clicked this link:
 
 %img(src='/lesson002/l272.png')
 
+%p I returned to the codelabs-tab.
+
+%p I clicked through to the next page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-big-query#3' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-big-query#3
+  
+%p I studied that page.
+
+%p I clicked through to the next page:
+
+%p
+  %a(href='https://codelabs.developers.google.com/codelabs/cp100-big-query#4' target='x')
+    https://codelabs.developers.google.com/codelabs/cp100-big-query#4
+  
+%p I studied that page.
+%p In the BigQuery-tab I clicked link: "Compose Query"
+
+%img(src='/lesson002/l273.png')
+
+%p BigQuery offered a TextArea-element for me to enter syntax:
 
 
+%img(src='/lesson002/l274.png')
 
+%p I entered syntax:
+
+.syntax
+  %pre
+    =render 'lesson002j'  
+
+%p I clicked red-button: "Run Query".
+
+%p BigQuery responded quickly:
+
+
+%img(src='/lesson002/l275.png')
+
+%p I returned to my Cloud-Shell.
+
+%p I asked it to "Reconnect".
+
+%p I entered command:
+
+.syntax
+  %pre
+    =render 'lesson002k'
+
+%p I saw this:
+
+.syntax
+  %pre
+    =render 'lesson002m'
+
+%p I entered: "1".
+
+%p That caused BigQuery to fail.
+
+%p I tried other ideas but they all failed:
+
+.syntax
+  %pre
+    =render 'lesson002n'
+
+%p I decided to avoid BigQuery.
 
 
 %p UNDER CONSTRUCTION.
