--- a/app/views/lessons/lesson002.html.haml
+++ b/app/views/lessons/lesson002.html.haml
@@ -1511,8 +1511,14 @@ Next, in the codelabs-tab, I clicked this link:
 
 %p I decided to avoid BigQuery.
 
+%p To clean-up, I clicked on my BigQuery tab.
 
-%p UNDER CONSTRUCTION.
+%p I found the link to "Delete Dataset"; I clicked it:
+
+%img(src='/lesson002/l276.png')
+
+%p BigQuery indicated successful delete.
+
 %p That ended my interaction with the CP100-node I call: "Big Query".
 %p Also that ends lesson002 of cs101.us
 
