--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -70,6 +70,54 @@
   %li Jupyter is good for training.
   %li Jupyter is poor for development.
 
+%p To start Jupyter I typed a simple shell command:
+
+.syntax
+  %pre
+    %code jupyter notebook
+
+%p The above command should work on both Mac and Linux.
+
+%p On windows you should find the right icon and then click on it.
+
+%p On windows if you have trouble, I offer a tip:
+
+%p
+  %a(href='https://www.google.com/search?q=On+windows+how+to+start+Jupyter' target='x')
+    https://www.google.com/search?q=On+windows+how+to+start+Jupyter
+
+%p On my laptop after I typed: "jupyter notebook", I saw this:
+
+%img(src='/lesson003/jup1.png')
+
+%p I clicked the new-link and I saw this:
+
+%img(src='/lesson003/jup2.png')
+
+%p I typed in some Python syntax:
+
+.syntax
+  %pre
+    %code print('hello jupyter.')
+
+%p I pressed the enter-key.
+
+%p That just made the field larger.
+
+%p I entered shift-enter.
+
+%p Python came to life and ran that Python syntax:
+
+%img(src='/lesson003/jup3.png')
+
+%p Now you know enough Jupyter to learn some Python.
+
+%hr/
+
+%h2#python Python
+
+%hr/
+
 
 
 
