--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -116,6 +116,19 @@
 
 %h2#python Python
 
+%p Here is some Python.
+
+%p Try to copy-paste parts of it into Jupyter.
+
+%p Then in Jupyter, use shift-enter to run each part.
+
+%p Do it slowly and carefully.
+
+.syntax
+  %pre
+    =render 'lesson003c'
+    
+
 %hr/
 
 
