--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -13,9 +13,25 @@
 
 %h2#anaconda Anaconda
 
-%p Anaconda runs on Mac, Windows, Linux.
+%p Anaconda runs on Mac, Windows, and  Linux.
 
-%p I started by downloading Anaconda for my laptop:
+%p I started by downloading Anaconda 5.1.0 for my laptop:
+
+%ul
+  %li
+    Mac:
+    %a(href='https://drive.google.com/open?id=1XasIhnctEdHKkWFt8aK_-2goVgo_KV8_' target='x')
+      https://drive.google.com/open?id=1XasIhnctEdHKkWFt8aK_-2goVgo_KV8_
+  %li
+    Windows:
+    %a(href='https://drive.google.com/open?id=1QqaRx4UvpneVMzLZShIzeamE0rPvrj8C' target='x')
+      https://drive.google.com/open?id=1QqaRx4UvpneVMzLZShIzeamE0rPvrj8C
+  %li
+    Linux:
+    %a(href='https://drive.google.com/open?id=1WULX7krUKayH0l4BVIb3dCr0Z3i-gQHR' target='x')
+      https://drive.google.com/open?id=1WULX7krUKayH0l4BVIb3dCr0Z3i-gQHR
+
+%p If I want an Anaconda version other than 5.1.0, it should be available here:
 
 %p
   %a(href='https://repo.continuum.io/archive/' target='x')
@@ -55,7 +71,7 @@
 
 %p The first type is what I call the presentation-training-scenario.
 
-%p If I present a small amount Python based content to a room full of Python programmers, Jupyter can be a good fit for that task.
+%p If I present a small amount of Python based content to a room full of Python programmers, Jupyter can be a good fit for that task.
 
 %p The second type is what I call the development-scenario.
 
@@ -92,7 +108,7 @@
 
 %img(src='/lesson003/jup1.png')
 
-%p I clicked the new-link and I saw this:
+%p On the left, I clicked the new-link and I saw this:
 
 %img(src='/lesson003/jup2.png')
 
