--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -134,17 +134,41 @@
 
 %h2#python Python
 
-%p Here is some Python.
-
-%p Try to copy-paste parts of it into Jupyter.
-
-%p Then in Jupyter, use shift-enter to run each part.
-
-%p Do it slowly and carefully.
+%p Here is some Python:
 
 .syntax
   %pre
-    =render 'lesson003c'
+    %code print("Hello, Python!")
+
+%p Try to copy-paste it into Jupyter.
+
+%p Then in Jupyter, use shift-enter to run it.
+
+%p I did that.
+
+%p First, I saw this:
+
+%img(src='/lesson003/jup4.png')
+
+%p Then, I pasted:
+
+%img(src='/lesson003/jup5.png')
+
+%p Then, I pressed shift-enter:
+
+%img(src='/lesson003/jup6.png')
+
+%p If you can do that in your laptop, you are on the right path.
+
+%p Time to move along.
+
+%p I show you More python below.
+
+%p Try to slowly and carefull run pieces of it in Jupyter:
+
+.syntax
+  %pre
+    =render 'lesson003py4ds1'
     
 
 %hr/
