--- a/app/views/lessons/index.html.haml
+++ b/app/views/lessons/index.html.haml
@@ -5,4 +5,6 @@
     %a(href='/lessons/lesson001') Lesson 001 [ Google GCP ]
   %li
     %a(href='/lessons/lesson002') Lesson 002 [ Google GCP ]
+  %li
+    %a(href='/lessons/lesson003') Lesson 003 [ Data Science Intro ]
 
