--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -111,7 +111,7 @@
 
 %img(src='/lesson003/jup1.png')
 
-%p On the left, I clicked the new-link and I saw this:
+%p On the right, I clicked the new-link and I saw this:
 
 %img(src='/lesson003/jup2.png')
 
