--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -9,6 +9,8 @@
     %a(href='#python') Python
   %li
     %a(href='#ds') Data Science
+  %li
+    %a(href='#qa') Questions/Answers
 
 %p I did this lesson and collected notes during my efforts.
 
@@ -172,6 +174,7 @@
 .syntax
   %pre
     =render 'lesson003py4ds1'
+%hr/
    
 %h2#ds Data Science
 
@@ -215,5 +218,10 @@
 
 %img(src='/lesson003/ds12.png')
 
+%hr/
+
+%h2#qa Questions/Answers
+
+%p Under Construction
 
 %hr/
