--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -42,7 +42,7 @@
   %a(href='https://repo.continuum.io/archive/' target='x')
     https://repo.continuum.io/archive/
 
-%p After I downloaded it, I started the install it by clicking on the download.
+%p After I downloaded it, I started the install by clicking on the download.
 
 %p During the install, I answered yes to all the defaults.
 
@@ -135,6 +135,7 @@
 
 %p Now you know enough Jupyter to learn some Python.
 
+%a(href='#top') [top]
 %hr/
 
 %h2#python Python
@@ -174,6 +175,8 @@
 .syntax
   %pre
     =render 'lesson003py4ds1'
+
+%a(href='#top') [top]
 %hr/
    
 %h2#ds Data Science
@@ -223,5 +226,5 @@
 %h2#qa Questions/Answers
 
 %p Under Construction
-
+%a(href='#top') [top]
 %hr/
