--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -225,6 +225,53 @@
 
 %h2#qa Questions/Answers
 
+%pre
+
+What is Data Science?
+
+Why do you want to learn Data Science?
+
+What is the best way to learn Data Science?
+
+What is Anaconda?
+
+Why use Anaconda?
+
+What are alternatives to Anaconda?
+
+How to install Anaconda?
+
+How to operate Anaconda?
+
+What is Jupyter?
+
+Why use Jupyter?
+
+What are alternatives to Jupyter?
+
+How to install Jupyter?
+
+How to operate Jupyter?
+
+What is Python?
+
+Why use Python?
+
+What are alternatives to Python?
+
+How to install Python?
+
+How to operate Python?
+
+What are the main Python data types?
+
+How to print part of a String?
+
+How to concatenate two Strings?
+
+
+
+
 %p Under Construction
 %a(href='#top') [top]
 %hr/
