--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -269,6 +269,18 @@ How to print part of a String?
 
 How to concatenate two Strings?
 
+What is a Python List?
+
+How is a List like a String?
+
+How is a List different than a String?
+
+What is a Python Tuple?
+
+How is a Tuple like a List?
+
+How is a Tuple different than a List?
+
 
 
 
