--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -281,6 +281,30 @@ How is a Tuple like a List?
 
 How is a Tuple different than a List?
 
+How to write if-then-else logic in Python?
+
+How to write a while-loop in Python?
+
+How to write a for-loop in Python?
+
+How is a while-loop like a for-loop?
+
+How is a while-loop different than a for-loop?
+
+What is a Regular Expression?
+
+Why use Regular Expressions?
+
+In Python how to operate Regular Expressions?
+
+In a Regular Expression, what is a group?
+
+In a Regular Expression, how to create a group?
+
+In Python what is a Function?
+
+In Python how to create a Function?
+
 
 
 
