--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -303,7 +303,19 @@ In a Regular Expression, how to create a group?
 
 In Python what is a Function?
 
+In Python why use Functions?
+
 In Python how to create a Function?
+
+In a Function, what does the return statement do?
+
+In a Function how to declare a default value for an input parameter?
+
+In Python what does the range() function do?
+
+In Python how to concatenate two lists?
+
+
 
 
 
