--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -315,6 +315,24 @@ In Python what does the range() function do?
 
 In Python how to concatenate two lists?
 
+When I call the print() function, if I see a %s parameter, what does that mean?
+
+In Python what is Integer division?
+
+When I call split() to split a String, what do I get?
+
+How do I operate Jupyter so it sees local CSV files?
+
+What is a local CSV file?
+
+In Python what does the open() function do?
+
+In Python what does the iter() function do?
+
+In Python what does the rstrip() function do?
+
+
+
 
 
 
