--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -225,115 +225,169 @@
 
 %h2#qa Questions/Answers
 
-%pre
-
-What is Data Science?
-
-Why do you want to learn Data Science?
-
-What is the best way to learn Data Science?
-
-What is Anaconda?
-
-Why use Anaconda?
-
-What are alternatives to Anaconda?
-
-How to install Anaconda?
-
-How to operate Anaconda?
-
-What is Jupyter?
-
-Why use Jupyter?
-
-What are alternatives to Jupyter?
-
-How to install Jupyter?
-
-How to operate Jupyter?
-
-What is Python?
-
-Why use Python?
-
-What are alternatives to Python?
-
-How to install Python?
-
-How to operate Python?
-
-What are the main Python data types?
-
-How to print part of a String?
-
-How to concatenate two Strings?
-
-What is a Python List?
-
-How is a List like a String?
-
-How is a List different than a String?
-
-What is a Python Tuple?
-
-How is a Tuple like a List?
-
-How is a Tuple different than a List?
-
-How to write if-then-else logic in Python?
-
-How to write a while-loop in Python?
-
-How to write a for-loop in Python?
-
-How is a while-loop like a for-loop?
-
-How is a while-loop different than a for-loop?
-
-What is a Regular Expression?
-
-Why use Regular Expressions?
-
-In Python how to operate Regular Expressions?
-
-In a Regular Expression, what is a group?
-
-In a Regular Expression, how to create a group?
-
-In Python what is a Function?
-
-In Python why use Functions?
-
-In Python how to create a Function?
-
-In a Function, what does the return statement do?
-
-In a Function how to declare a default value for an input parameter?
-
-In Python what does the range() function do?
-
-In Python how to concatenate two lists?
-
-When I call the print() function, if I see a %s parameter, what does that mean?
-
-In Python what is Integer division?
-
-When I call split() to split a String, what do I get?
-
-How do I operate Jupyter so it sees local CSV files?
-
-What is a local CSV file?
-
-In Python what does the open() function do?
-
-In Python what does the iter() function do?
-
-In Python what does the rstrip() function do?
-
-
-
-
+%ul
+    
+  %li
+    What is Data Science?
+    
+  %li
+    Why do you want to learn Data Science?
+    
+  %li
+    What is the best way to learn Data Science?
+    
+  %li
+    What is Anaconda?
+    
+  %li
+    Why use Anaconda?
+    
+  %li
+    What are alternatives to Anaconda?
+    
+  %li
+    How to install Anaconda?
+    
+  %li
+    How to operate Anaconda?
+    
+  %li
+    What is Jupyter?
+    
+  %li
+    Why use Jupyter?
+    
+  %li
+    What are alternatives to Jupyter?
+    
+  %li
+    How to install Jupyter?
+    
+  %li
+    How to operate Jupyter?
+    
+  %li
+    What is Python?
+    
+  %li
+    Why use Python?
+    
+  %li
+    What are alternatives to Python?
+    
+  %li
+    How to install Python?
+    
+  %li
+    How to operate Python?
+    
+  %li
+    What are the main Python data types?
+    
+  %li
+    How to print part of a String?
+    
+  %li
+    How to concatenate two Strings?
+    
+  %li
+    What is a Python List?
+    
+  %li
+    How is a List like a String?
+    
+  %li
+    How is a List different than a String?
+    
+  %li
+    What is a Python Tuple?
+    
+  %li
+    How is a Tuple like a List?
+    
+  %li
+    How is a Tuple different than a List?
+    
+  %li
+    How to write if-then-else logic in Python?
+    
+  %li
+    How to write a while-loop in Python?
+    
+  %li
+    How to write a for-loop in Python?
+    
+  %li
+    How is a while-loop like a for-loop?
+    
+  %li
+    How is a while-loop different than a for-loop?
+    
+  %li
+    What is a Regular Expression?
+    
+  %li
+    Why use Regular Expressions?
+    
+  %li
+    In Python how to operate Regular Expressions?
+    
+  %li
+    In a Regular Expression, what is a group?
+    
+  %li
+    In a Regular Expression, how to create a group?
+    
+  %li
+    In Python what is a Function?
+    
+  %li
+    In Python why use Functions?
+    
+  %li
+    In Python how to create a Function?
+    
+  %li
+    In a Function, what does the return statement do?
+    
+  %li
+    In a Function how to declare a default value for an input parameter?
+    
+  %li
+    In Python what does the range() function do?
+    
+  %li
+    In Python how to concatenate two lists?
+    
+  %li
+    When I call the print() function, if I see a %s parameter, what does that mean?
+    
+  %li
+    In Python what is Integer division?
+    
+  %li
+    When I call split()    to split a String, what do I get?
+    
+  %li
+    When I call split(",") to split a String, what do I get?
+    
+  %li
+    How do I operate Jupyter so it sees local CSV files?
+    
+  %li
+    What is a local CSV file?
+    
+  %li
+    In Python what does the open() function do?
+    
+  %li
+    In Python what does the iter() function do?
+    
+  %li
+    In Python what does the rstrip() function do?
+    
+  %li
+    In Python where do I usually see the append() function?
 
 
 
