--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -389,8 +389,48 @@
   %li
     In Python where do I usually see the append() function?
 
-
-
+  %li
+    In Python, what does the import command do?
+  %li
+    What is NumPy?
+  %li
+    Why use NumPy?
+  %li
+    What is Pandas?
+  %li
+    Why use Pandas?
+  %li
+    What is SciPy?
+  %li
+    Why use SciPy?
+  %li
+    What is matplotlib?
+  %li
+    Why use matplotlib?
+  %li
+    What is sklearn?
+  %li
+    Why use sklearn?
+  %li
+    In Machine Learning, what is a "Feature"?
+  %li
+    The Boston-Housing-example uses the word: "Target"; what is "Target"?
+  %li
+    In Machine Learning, what is "X"?
+  %li
+    In Machine Learning, what is "Y"?
+  %li
+    In Machine Learning, what is Linear Regression?
+  %li
+    In Linear Regression what is "Intercept"?
+  %li
+    In Linear Regression what is "Coefficient"?
+  %li
+    In Linear Regression what is acronym: "MSE"?
+  %li
+    In sklearn-LinearRegression, how do I get a prediction?
+  %li
+    When I get a prediction, what does it look like?
 
 %p Under Construction
 %a(href='#top') [top]
