--- a/app/views/lessons/lesson003.html.haml
+++ b/app/views/lessons/lesson003.html.haml
@@ -431,6 +431,12 @@
     In sklearn-LinearRegression, how do I get a prediction?
   %li
     When I get a prediction, what does it look like?
+  %li
+    In Data Science, what is a "Scatter Plot"?
+  %li
+    In Data Science, why use a "Scatter Plot"?
+  %li
+    In Python how to create a "Scatter Plot"?
 
 %a(href='#top') [top]
 %hr/
