--- a/app/views/home/links.html.haml
+++ b/app/views/home/links.html.haml
@@ -11,6 +11,12 @@
     %a(href='https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/' target='x')
       https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/
   %li
+    %a(href='https://meetup.com/cs101a' target='x')
+      https://meetup.com/cs101a
+  %li
+    %a(href='https://meetup.com/Palo-Alto-Data-Science-Association' target='x')
+      https://meetup.com/Palo-Alto-Data-Science-Association
+  %li
     %a(href='https://codelabs.developers.google.com/cpb100' target='x')
       https://codelabs.developers.google.com/cpb100
   %li
