--- a/app/views/lessons/lesson004.html.haml
+++ b/app/views/lessons/lesson004.html.haml
@@ -16,6 +16,10 @@
 
 %p Also they will want your credit-card information.
 
+%p So, you should do that now.
+
+%p Or, if you want, just keep reading.
+
 %p To do this lesson, I needed only a browser.
 
 %p I used a Chrome browser.
@@ -37,6 +41,8 @@
 %p
 
 %img(src='/lesson004/df151.png')
+
+%p Notice in the above image that I called it: "dfnow".
 
 %p
   %a(href='#top') [top]
