--- a/app/views/lessons/lesson004.html.haml
+++ b/app/views/lessons/lesson004.html.haml
@@ -42,7 +42,9 @@
 
 %img(src='/lesson004/df151.png')
 
-%p Notice in the above image that I called it: "dfnow".
+%p Notice in the above image that I did not use the suggested project-name.
+
+%p Instead I called my new project: "dfnow".
 
 %p
   %a(href='#top') [top]
