--- a/app/views/lessons/lesson004.html.haml
+++ b/app/views/lessons/lesson004.html.haml
@@ -38,13 +38,133 @@
 
 %p I created a project:
 
-%p
-
 %img(src='/lesson004/df151.png')
 
 %p Notice in the above image that I did not use the suggested project-name.
 
 %p Instead I called my new project: "dfnow".
+
+%p Dataflow depends on a bucket:
+
+%img(src='/lesson004/df153.png')
+
+%p I created a bucket called "dfnow":
+
+%img(src='/lesson004/df155.png')
+
+%p I checked that it was available in the browser:
+
+%img(src='/lesson004/df157.png')
+
+%p Next, I loaded a URL:
+
+%p
+  %a(href='https://console.cloud.google.com/dataflow' target='x')
+    https://console.cloud.google.com/dataflow
+
+%p I saw this:
+
+%img(src='/lesson004/df159.png')
+
+%p I clicked blue-button: "CREATE JOB FROM TEMPLATE".
+
+%p GCP served me a form to fill out:
+
+%img(src='/lesson004/df163.png')
+
+%p I wanted to test if Dataflow would work for me.
+
+%p So, I supplied minimal information to the form.
+
+%p I clicked blue-button: "Run job".
+
+%p GCP served me an error:
+
+%img(src='/lesson004/df167.png')
+
+%p I looked for help:
+
+%img(src='/lesson004/df169.png')
+
+
+%p I returned to URL:
+
+%p
+  %a(href='https://console.cloud.google.com/dataflow' target='x')
+    https://console.cloud.google.com/dataflow
+
+%p I saw this:
+
+%img(src='/lesson004/df171.png')
+
+%p I clicked blue-button: "Try Dataflow":
+
+%img(src='/lesson004/df173.png')
+
+%p It offered me help with my permission problem.
+
+%p I clicked through:
+
+%img(src='/lesson004/df175.png')
+
+%p I clicked blue-button: "Enable APIs":
+
+%img(src='/lesson004/df177.png')
+
+%p It needed two minutes:
+
+%img(src='/lesson004/df179.png')
+
+%p It finished. I clicked blue-button, "CREATE JOB FROM TEMPLATE":
+
+%img(src='/lesson004/df181.png')
+
+%p GCP served me a form to fill out:
+
+%img(src='/lesson004/df183.png')
+
+%p I wanted to test if Dataflow would work for me.
+
+%p So, I supplied minimal information to the form.
+
+%p I clicked blue-button: "Run job".
+
+%p Instead of serving an error, GCP launched a Job:
+
+%img(src='/lesson004/df185.png')
+
+%p I saw information about the job as it progressed:
+
+%img(src='/lesson004/df187.png')
+
+%p After 4 min 28 sec, it finished:
+
+%img(src='/lesson004/df189.png')
+
+%p I visited a URL to search for the job-output:
+
+%p
+  %a(href='https://console.cloud.google.com/storage' target='x')
+    https://console.cloud.google.com/storage
+
+%p I found it and clicked on a file in the dfnow-bucket:
+
+%img(src='/lesson004/df191.png')
+
+%p I saw output from the job:
+
+%img(src='/lesson004/df193.png')
+
+%p After I studied the files, I deleted them from the bucket:
+
+%img(src='/lesson004/df195.png')
+
+
+%p At that point I was convinced that I had the permissions I need to submit Dataflow-jobs.
+
+
+
+
 
 %p
   %a(href='#top') [top]
