--- a/app/views/lessons/index.html.haml
+++ b/app/views/lessons/index.html.haml
@@ -7,4 +7,6 @@
     %a(href='/lessons/lesson002') Lesson 002 [ Google GCP ]
   %li
     %a(href='/lessons/lesson003') Lesson 003 [ Data Science Intro ]
+  %li
+    %a(href='/lessons/lesson004') Lesson 004 [ Google GCP Dataflow ]
 
