--- a/app/views/lessons/lesson004.html.haml
+++ b/app/views/lessons/lesson004.html.haml
@@ -86,7 +86,6 @@
 
 %img(src='/lesson004/df169.png')
 
-
 %p I returned to URL:
 
 %p
@@ -162,9 +161,76 @@
 
 %p At that point I was convinced that I had the permissions I need to submit Dataflow-jobs.
 
+%p
+  %a(href='#top') [top]
+%hr/
 
+%h2#python Python DataFlow
 
+%p I started this effort by activating Cloud-Shell:
 
+%img(src='/lesson004/df200.png')
+
+%p I clicked button on the right to give Cloud-Shell its own tab:
+
+%img(src='/lesson004/df202.png')
+
+%p I like to have my Cloud-Shell tab to the right of my GCP-tab:
+
+%img(src='/lesson004/df204.png')
+
+%p I visited a URL and studied it:
+
+%p
+  %a(href='https://cloud.google.com/dataflow/docs/quickstarts/quickstart-python' target='x')
+    https://cloud.google.com/dataflow/docs/quickstarts/quickstart-python
+%p I should have started there.
+
+%p The above page offers information on how to avoid the API-permission-error I encountered.
+
+%p In Cloud-Shell-tab I issued commands:
+
+.syntax
+  %pre
+    %code
+      virtualenv venv10
+      \. venv10/bin/activate
+      pip install google-cloud-dataflow
+%p That quickly finished.
+
+%p Then, I prepared two shell variables for a large Python command:
+
+.syntax
+  %pre
+    %code
+      env|grep PROJECT
+      export BUCKET=gs://dfnow
+
+%p I launched a Dataflow-job using Python:
+
+.syntax
+  %pre
+    =render 'lesson004a'
+
+%p Much text flew by in the tab; I captured some:
+
+%img(src='/lesson004/df206.png')
+
+%p Eventually it finished:
+
+%img(src='/lesson004/df208.png')
+
+%p In the buckets-Browser, I looked for output from the job:
+
+%img(src='/lesson004/df210.png')
+
+%p I found output from the job:
+
+%img(src='/lesson004/df212.png')
+
+%p After I that output, I returned to the buckets-Browser and removed files from that job.
+
+%p That concludes this lesson on GCP-Dataflow.
 
 %p
   %a(href='#top') [top]
