--- a/app/views/lessons/lesson004.html.haml
+++ b/app/views/lessons/lesson004.html.haml
@@ -228,7 +228,7 @@
 
 %img(src='/lesson004/df212.png')
 
-%p After I that output, I returned to the buckets-Browser and removed files from that job.
+%p After I saw that output, I returned to the buckets-Browser and removed files from that job.
 
 %p That concludes this lesson on GCP-Dataflow.
 
