--- a/app/views/lessons/index.html.haml
+++ b/app/views/lessons/index.html.haml
@@ -9,4 +9,6 @@
     %a(href='/lessons/lesson003') Lesson 003 [ Data Science Intro ]
   %li
     %a(href='/lessons/lesson004') Lesson 004 [ Google GCP Dataflow ]
+  %li
+    %a(href='/lessons/lesson005') Lesson 005 [ 2018-03-09 Meetup ]
 
