--- a/app/views/lessons/lesson005.html.haml
+++ b/app/views/lessons/lesson005.html.haml
@@ -76,6 +76,8 @@
     %br/
     %a(href='https://console.cloud.google.com/cloudpubsub' target='x')
       https://console.cloud.google.com/cloudpubsub
+  %li Grant permission to srvacct to be admin of topic10 via RHS-form.
+  %li Grant permission to srvacct to be admin of sub10   via RHS-form.
   %li ssh both mgr and worker
   %li
     .syntax
